--- a/.github/workflows/publish_foss_docker_amd64.yml
+++ b/.github/workflows/publish_foss_docker_amd64.yml
@@ -29,10 +29,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      # - name: Strip enterprise code
-      #   run: |
-      #     rm -rf enterprise
-      #     rm -rf spec/enterprise
+      - name: Strip enterprise code
+        run: |
+          rm -rf enterprise
+          rm -rf spec/enterprise
 
       # - name: Set Chatwoot edition
       #   run: |
