--- a/.github/workflows/size-limit.yml
+++ b/.github/workflows/size-limit.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   test:
-    #runs-on: ubuntu-20.04
-    runs-on: self-hosted
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v4
@@ -27,6 +26,11 @@ jobs:
 
       - name: yarn
         run: yarn install
+
+      #- name: Strip enterprise code
+      #  run: |
+      #    rm -rf enterprise
+      #    rm -rf spec/enterprise
 
       - name: Run asset compile
         run: bundle exec rake assets:precompile
