--- a/.github/workflows/publish_foss_docker.yml
+++ b/.github/workflows/publish_foss_docker.yml
@@ -8,10 +8,11 @@ name: Publish Chatwoot CE docker images
 on:
   push:
     branches:
-      - main
-      #- uno
+      - develop
+      - master
     tags:
       - v*
+# pull_request:
   workflow_dispatch:
 
 jobs:
@@ -29,27 +30,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      # - name: Strip enterprise code
-      #   run: |
-      #     rm -rf enterprise
-      #     rm -rf spec/enterprise
+      #- name: Strip enterprise code
+      #  run: |
+      #    rm -rf enterprise
+      #    rm -rf spec/enterprise
 
-      # - name: Set Chatwoot edition
-      #   run: |
-      #     echo -en '\nENV CW_EDITION="ce"' >> docker/Dockerfile
+      #- name: Set Chatwoot edition
+      #  run: |
+      #    echo -en '\nENV CW_EDITION="ce"' >> docker/Dockerfile
 
       - name: set docker tag
         run: |
-          echo "DOCKER_TAG=lucirleisantos/original_cw:$GIT_REF" >> $GITHUB_ENV
-          echo "DOCKER_ARM_TAG=lucirleisantos/original_cw-arm:$GIT_REF" >> $GITHUB_ENV
+          # Replace forward slashes with hyphens in the ref name
+          SANITIZED_REF=$(echo "$GIT_REF" | sed 's/\//-/g')
+          echo "DOCKER_TAG=lucirlei/original_cw:$SANITIZED_REF" >> $GITHUB_ENV
 
       - name: replace docker tag if master
         if: github.ref_name == 'master'
         run: |
-          echo "DOCKER_TAG=lucirleisantos/original_cw:latest" >> $GITHUB_ENV
-          echo "DOCKER_ARM_TAG=lucirleisantos/original_cw:latest" >> $GITHUB_ENV
+          echo "DOCKER_TAG=lucirlei/original_cw:latest" >> $GITHUB_ENV
 
       - name: Login to DockerHub
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -60,15 +62,6 @@ jobs:
         with:
           context: .
           file: docker/Dockerfile
-          platforms: linux/amd64
-          push: true
+          platforms: linux/amd64, linux/arm64
+          push: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
           tags: ${{ env.DOCKER_TAG }}
-
-      - name: Build and push arm64
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: docker/Dockerfile
-          platforms: linux/arm64
-          push: false
-          tags: ${{ env.DOCKER_ARM_TAG }}
