--- a/config/features.yml
+++ b/config/features.yml
@@ -92,35 +92,5 @@
 - name: custom_roles
   enabled: false
   premium: true
-- name: hide_all_chats_for_agent
-  enabled: false
-- name: hide_contacts_for_agent
-  enabled: false
-- name: hide_filters_for_agent
-  enabled: false
-- name: send_agent_name_in_whatsapp_message
-  enabled: true
-- name: read_message
-  enabled: true
-#- name: disable_whatsapp_messaging_window
-#  enabled: false
-- name: agent_conversation_viewed
-  enabled: true
-- name: hide_unassigned_for_agent
-  enabled: false
-- name: hide_all_inbox_for_agent
-  enabled: false
-# - name: channel_notifica_me
-#   enabled: false
-- name: channel_sms
-  enabled: false
-- name: channel_whatsapp
-  enabled: true
-- name: channel_telegram
-  enabled: false
-- name: channel_line
-  enabled: false
-- name: channel_api
-  enabled: true
-- name: wavoip
+- name: chatwoot_v4
   enabled: false
