--- a/config/installation_config.yml
+++ b/config/installation_config.yml
@@ -32,11 +32,11 @@
 - name: BRAND_URL
   value: 'https://www.chatwoot.com'
   display_title: 'Brand URL'
-  description: 'The URL that would be used in emails under the section "Powered By"'
+  description: 'The URL that would be used in emails under the section “Powered By”'
 - name: WIDGET_BRAND_URL
   value: 'https://www.chatwoot.com'
   display_title: 'Widget Brand URL'
-  description: 'The URL that would be used in the widget under the section "Powered By"'
+  description: 'The URL that would be used in the widget under the section “Powered By”'
 - name: BRAND_NAME
   value: 'Chatwoot'
   display_title: 'Brand Name'
@@ -113,7 +113,7 @@
 - name: FACEBOOK_API_VERSION
   display_title: 'Facebook API Version'
   description: 'Configure this if you want to use a different Facebook API version. Make sure its prefixed with `v`'
-  value: 'v20.0'
+  value: 'v17.0'
   locked: false
 - name: ENABLE_MESSENGER_CHANNEL_HUMAN_AGENT
   display_title: 'Enable human agent'
@@ -132,40 +132,6 @@
   display_title: 'Azure App Secret'
   locked: false
 # End of Microsoft Email Channel Config
-
-# MARK: UNOAPI Channel Config
-- name: UNOAPI_AUTH_TOKEN
-  value:
-  display_title: 'UNO API Auth Token'
-  description: 'The Auth Token for UNO API. Find more details on how to configure UNOAPI here: https://github.com/clairton/unoapi-cloud/tree/main'
-# End of UNOAPI Channel Config
-
-# MARK: WhatsApp Embedded
-- name: WHATSAPP_EMBEDDED_LICENSE_KEY
-  value:
-  display_title: 'License Key'
-  description: >
-    The license key for WhatsApp Embedded
-    This key is required to access WhatsApp's embedded functionality. Contact us via WhatsApp: https://bit.ly/3zfMVgT
-- name: WHATSAPP_EMBEDDED_FACEBOOK_APP_ID
-  value:
-  display_title: 'Facebook App ID'
-  description: 'The Facebook App ID for WhatsApp Embedded'
-- name: WHATSAPP_EMBEDDED_FACEBOOK_CONFIG_ID
-  value:
-  display_title: 'Facebook Config ID'
-  description: 'The Facebook Config ID for WhatsApp Embedded'
-- name: WHATSAPP_EMBEDDED_FACEBOOK_TOKEN
-  value:
-  display_title: 'Facebook Token'
-  description: 'The Facebook Token for WhatsApp Embedded'
-- name: WABA_EMBEDDED_SIGNUP
-  type: boolean
-  value: false
-  display_title: 'WABA Embedded Signup'
-  description: 'Enable WABA Embedded Signup'
-  locked: false
-# End of WhatsApp Embedded
 
 # ------- Chatwoot Internal Config for Cloud ----#
 - name: CHATWOOT_INBOX_TOKEN
@@ -214,7 +180,7 @@
   value: 'enterprise'
   description: 'The pricing plan for the installation, retrieved from the billing API'
 - name: INSTALLATION_PRICING_PLAN_QUANTITY
-  value: 10000
+  value: 
   description: 'The number of licenses purchased for the installation, retrieved from the billing API'
 - name: CHATWOOT_SUPPORT_WEBSITE_TOKEN
   value:
@@ -257,12 +223,6 @@
   description: 'Contents on your firebase credentials json file'
 ## ------ End of Configs added for FCM v1 notifications ------ ##
 
-## ------ Configs custom ------ ##
-- name: CONVERSATION_STYLE_CSS
-  display_title: 'Conversation Style CSS'
-  value:
-  description: 'Customize conversation, put your valid css'
-## ------ End of Configs custom ------ ##
 ## ----- Captain Configs ----- ##
 - name: CAPTAIN_API_URL
   value:
