--- a/config/features.yml
+++ b/config/features.yml
@@ -12,7 +12,7 @@
 - name: ip_lookup
   enabled: true
 - name: disable_branding
-  enabled: true
+  enabled: false
   premium: true
 - name: email_continuity_on_api_channel
   enabled: true
@@ -66,10 +66,10 @@
 - name: custom_reply_domain
   enabled: true
 - name: audit_logs
-  enabled: true
+  enabled: false
   premium: true
 - name: response_bot
-  enabled: true
+  enabled: false
   premium: true
 - name: message_reply_to
   enabled: true
@@ -79,18 +79,18 @@
 - name: inbox_view
   enabled: true
 - name: sla
-  enabled: true
+  enabled: false
   premium: true
   help_url: https://chwt.app/hc/sla
 - name: help_center_embedding_search
-  enabled: true
+  enabled: false
   premium: true
 - name: linear_integration
   enabled: true
 - name: captain_integration
   enabled: true
 - name: custom_roles
-  enabled: true
+  enabled: false
   premium: true
 - name: chatwoot_v4
   enabled: true
