--- a/config/features.yml
+++ b/config/features.yml
@@ -10,14 +10,14 @@
 - name: channel_twitter
   enabled: true
 - name: ip_lookup
-  enabled: true
+  enabled: false
 - name: disable_branding
-  enabled: true
+  enabled: false
   premium: true
 - name: email_continuity_on_api_channel
-  enabled: true
+  enabled: false
 - name: help_center
-  enabled: true
+  enabled: false
   help_url: https://chwt.app/hc/help-center
 - name: agent_bots
   enabled: true
@@ -48,7 +48,7 @@
 - name: voice_recorder
   enabled: true
 - name: mobile_v2
-  enabled: true
+  enabled: false
 - name: channel_website
   enabled: true
 - name: campaigns
@@ -62,9 +62,9 @@
 - name: auto_resolve_conversations
   enabled: true
 - name: custom_reply_email
-  enabled: true
+  enabled: false
 - name: custom_reply_domain
-  enabled: true
+  enabled: false
 - name: audit_logs
   enabled: true
   premium: true
@@ -72,10 +72,10 @@
   enabled: true
   premium: true
 - name: message_reply_to
-  enabled: true
+  enabled: false
   help_url: https://chwt.app/hc/reply-to
 - name: insert_article_in_reply
-  enabled: true
+  enabled: false
 - name: inbox_view
   enabled: true
 - name: sla
@@ -83,14 +83,14 @@
   premium: true
   help_url: https://chwt.app/hc/sla
 - name: help_center_embedding_search
-  enabled: true
+  enabled: false
   premium: true
 - name: linear_integration
-  enabled: true
+  enabled: false
 - name: captain_integration
-  enabled: true
+  enabled: false
 - name: custom_roles
   enabled: true
   premium: true
 - name: chatwoot_v4
-  enabled: true
+  enabled: false
