--- a/.github/workflows/publish_foss_docker.yml
+++ b/.github/workflows/publish_foss_docker.yml
@@ -30,10 +30,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Strip enterprise code
-        run: |
-          rm -rf enterprise
-          rm -rf spec/enterprise
+      #- name: Strip enterprise code
+      #  run: |
+      #    rm -rf enterprise
+      #    rm -rf spec/enterprise
 
       - name: Set Chatwoot edition
         run: |
@@ -48,7 +48,7 @@ jobs:
       - name: replace docker tag if master
         if: github.ref_name == 'master'
         run: |
-          echo "DOCKER_TAG=chatwoot/chatwoot:latest-ce" >> $GITHUB_ENV
+          echo "DOCKER_TAG=lucirleisantos/chatwoot:latest-ce" >> $GITHUB_ENV
 
       - name: Login to DockerHub
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
