--- a/.github/workflows/publish_foss_docker.yml
+++ b/.github/workflows/publish_foss_docker.yml
@@ -43,12 +43,12 @@ jobs:
         run: |
           # Replace forward slashes with hyphens in the ref name
           SANITIZED_REF=$(echo "$GIT_REF" | sed 's/\//-/g')
-          echo "DOCKER_TAG=lucirleisantos/chatwoot:$SANITIZED_REF-ce" >> $GITHUB_ENV
+          echo "DOCKER_TAG=lucirleisantos/cw_original:$SANITIZED_REF-ce" >> $GITHUB_ENV
 
       - name: replace docker tag if master
         if: github.ref_name == 'master'
         run: |
-          echo "DOCKER_TAG=lucirleisantos/chatwoot:latest-ce" >> $GITHUB_ENV
+          echo "DOCKER_TAG=lucirleisantos/cw_original:latest" >> $GITHUB_ENV
 
       - name: Login to DockerHub
         if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
