--- a/config/features.yml
+++ b/config/features.yml
@@ -64,7 +64,7 @@
 - name: custom_reply_email
   enabled: true
 - name: custom_reply_domain
-  enabled: true
+  enabled: false
 - name: audit_logs
   enabled: false
   premium: true
@@ -86,35 +86,11 @@
   enabled: false
   premium: true
 - name: linear_integration
-  enabled: true
+  enabled: false
 - name: captain_integration
-  enabled: true
+  enabled: false
 - name: custom_roles
   enabled: false
   premium: true
-- name: hide_all_chats_for_agent
+- name: chatwoot_v4
   enabled: false
-- name: hide_contacts_for_agent
-  enabled: false
-- name: hide_filters_for_agent
-  enabled: false
-- name: send_agent_name_in_whatsapp_message
-  enabled: true
-- name: read_message
-  enabled: true
-- name: hide_unassigned_for_agent
-  enabled: false
-- name: hide_all_inbox_for_agent
-  enabled: false
-- name: channel_sms
-  enabled: true
-- name: channel_whatsapp
-  enabled: true
-- name: channel_telegram
-  enabled: true
-- name: channel_line
-  enabled: true
-- name: channel_api
-  enabled: true
-- name: wavoip
-  enabled: true
